--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
     
 </head>
 <body>
+    <div id="header"><h1>ETCH-A-SKETCH</h1></div>
     <div id="container">
 
     </div>
-    
+    <div class="button-container">
+        <div class="buttons">
+            <button id="clear-btn">CLEAR</button>
+            <button id="reset">RESET</button>
+            </div>
+        </div>
+    </div>
     <script src="script.js" defer></script>
 </body>
 </html>
